# sellershut

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  build.rs
.github/workflows/: check.yaml  test.yaml
contrib/: compose.yaml
crates/api-categories/: .env.example  Cargo.toml  LICENSE  Makefile.toml
crates/api-categories/migrations/: 0001_category_table.sql  20240824211637_category.sql
crates/api-categories/src/: lib.rs  main.rs
crates/api-categories/src/api/: mod.rs
crates/api-categories/src/api/entity/: mod.rs
crates/api-categories/src/api/mutation/: mod.rs  tests.rs
crates/api-categories/src/api/query/: mod.rs  tests.rs
crates/api-categories/src/routes/: mod.rs
crates/api-categories/src/state/: config.rs  mod.rs  multiplex.rs
crates/api-categories/src/state/database/: mod.rs  mutation.rs  query.rs
crates/api-categories/src/state/impls/: mod.rs  mutation.rs  query.rs
crates/api-categories/src/state/impls/mutation/: mod.rs
crates/api-categories/src/state/impls/query/: mod.rs  tests.rs
crates/api-categories/src/tests/: health_check.rs  mod.rs
crates/api-categories/src/tests/api/: mutation.rs  query.rs
crates/api-categories/src/tests/db/: mutation.rs  query.rs
crates/api-categories/tests/api/: health_check.rs  main.rs  utils.rs
crates/api-categories/tests/api/grpc/: mod.rs
crates/api-categories/tests/api/http/: health_check.rs
crates/api-search/: .env.example  Cargo.toml
crates/api-search/src/: lib.rs  main.rs
crates/api-search/src/api/: mod.rs
crates/api-search/src/api/http/: mod.rs
crates/api-search/src/api/pub_sub/: mod.rs
crates/api-search/src/nlp/: config.rs  mod.rs
crates/api-search/src/state/: mod.rs
crates/api-users/: .env.example  Cargo.toml  Makefile.toml
crates/api-users/migrations/: 0001_user_table.sql  0002_oauth_account_table.sql
crates/api-users/src/: main.rs
crates/api-users/src/state/: config.rs  mod.rs
crates/cache-service/: .env.example  Cargo.toml
crates/cache-service/src/: main.rs
crates/cache-service/src/state/: mod.rs
crates/core-services/: Cargo.toml
crates/core-services/src/: lib.rs
crates/core-services/src/cache/: key.rs  mod.rs
crates/core-services/src/state/: error.rs  events.rs  mod.rs  utils.rs
crates/core-services/src/state/config/: mod.rs  nats.rs
crates/core-services/src/telemetry/: mod.rs
crates/core-services/src/tracing/: config.rs  loki.rs  mod.rs
crates/sellershut-core/: Cargo.toml  README.md  build.rs
crates/sellershut-core/proto/: categories.proto  category.proto  common.proto  oauth.proto  user.proto  users.proto
crates/sellershut-core/proto/common/: request.proto  utils.proto
crates/sellershut-core/proto/users/: oauth.proto  user.proto
crates/sellershut-core/src/: lib.rs
crates/sellershut-core/src/categories/: mod.rs
crates/sellershut-core/src/common/: id.rs  id_gen.rs  mod.rs  paginate.rs  pagination.rs  request.rs  utils.rs
crates/sellershut-core/src/google/: mod.rs
crates/sellershut-core/src/tests/: mod.rs
crates/sellershut-core/src/users/: mod.rs
crates/services/: Cargo.toml
crates/services/src/: lib.rs
crates/services/src/state/: error.rs  mod.rs
crates/services/src/state/config/: meilisearch.rs  mod.rs  nats.rs  postgres.rs
crates/services/src/telemetry/: mod.rs
crates/state/: Cargo.toml
crates/state/src/config/: meilisearch.rs  mod.rs  postgres.rs
crates/state/src/state/: error.rs  mod.rs
examples/: Cargo.toml  LICENSE-APACHE
examples/grpc/: server.rs
examples/grpc-categories/: Cargo.toml
examples/grpc-categories/src/grpc/categories/: client.rs  server.rs
examples/grpc_categories/: Cargo.toml
examples/grpc_categories/examples/: grpc_client_categories.rs  grpc_server_categories.rs
examples/serde-serialisation/: Cargo.toml
examples/serde-serialisation/src/: main.rs
examples/serde_integration/: Cargo.toml
examples/serde_integration/examples/: serde.rs
examples/src/grpc/categories/: server.rs
proto/: category.proto
src/: lib.rs
src/categories/: mod.rs
