[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
async-nats = "0.35.1"
dotenvy = "0.15.7"
prost = "0.13.1"
sellershut-core = { path = "crates/sellershut-core" }
core-services = { path = "crates/core-services" }
serde = "1.0.209"
sqlx = "0.8.1"
thiserror = "1.0.63"
tokio = "1.39.3"
tonic = "0.12.1"
tonic-types = "0.12.1"
tracing = "0.1.40"

[workspace.package]
license = "AGPL-3.0-only"
repository = "https://git.kanjala.com/sellershut"
