[workspace]
members = ["crates/*", "examples/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
async-graphql = { version = "7.0.7", default-features = false }
async-graphql-axum = "7.0.7"
async-nats = "0.35.1"
axum = "0.7.5"
dotenvy = "0.15.7"
fake = "2.9.2"
prost = "0.13.1"
sellershut-core = { path = "crates/sellershut-core" }
core-services = { path = "crates/core-services" }
futures-util = "0.3.30"
opentelemetry = "0.25.0"
reqwest = "0.12.7"
sentry = { version = "0.34.0", default-features = false }
serde = "1.0.209"
serde_json = "1.0.127"
sqlx = { version = "0.8.1", default-features = false }
thiserror = "1.0.63"
time = "0.3.36"
tokio = "=1.38.0" # https://github.com/open-telemetry/opentelemetry-rust/issues/2094
tonic = "0.12.1"
tonic-reflection = "0.12.1"
tonic-types = "0.12.1"
tower = "0.5.0"
tracing = "0.1.40"
tracing-opentelemetry = "0.26.0"

[workspace.package]
license = "AGPL-3.0-only"
repository = "https://git.kanjala.com/sellershut"
