[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "examples"
publish = false
version = "0.1.0"

[[bin]]
name = "grpc-categories-server"
path = "src/grpc/categories/server.rs"
required-features = ["rpc-categories-server"]

[[bin]]
name = "grpc-categories-client"
path = "src/grpc/categories/client.rs"
required-features = ["rpc-categories-client"]

[[bin]]
name = "categories-serde"
path = "src/serde/categories.rs"
required-features = ["categories", "serde"]

[dependencies]
sellershut-core = { path = "../crates/sellershut-core", optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic.workspace = true

[features]
categories = ["dep:sellershut-core", "sellershut-core/categories"]
rpc-categories-client = ["dep:sellershut-core", "sellershut-core/rpc-client-categories"]
rpc-categories-server = ["dep:sellershut-core", "sellershut-core/rpc-server-categories"]
serde = ["dep:serde_json", "dep:sellershut-core", "sellershut-core/serde"]
