[package]
name = "api-categories"
version = "0.1.0"
edition = "2021"
publish = false
license.workspace = true

[dependencies]
anyhow.workspace = true
async-graphql = { workspace = true, features = ["playground", "time"] }
async-graphql-axum.workspace = true
async-nats.workspace = true
axum.workspace = true
core-services = { workspace = true, features = ["api", "cache", "nats", "postgres", "rt-tokio", "telemetry"] }
dotenvy.workspace = true
futures-util.workspace = true
sellershut-core = { workspace = true, features = ["rpc-client-categories", "rpc-server-categories", "serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = ["macros", "migrate", "postgres", "runtime-tokio", "time", "tls-rustls"] }
time.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic.workspace = true
tonic-reflection.workspace = true
tower = { workspace = true, features = ["make", "steer", "util"] }
tracing.workspace = true
