[package]
name = "api-categories"
version = "0.1.0"
edition = "2021"
publish = false
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-graphql = { workspace = true, features = ["playground", "time"] }
async-graphql-axum.workspace = true
async-nats.workspace = true
axum.workspace = true
core-services = { workspace = true, features = ["api", "cache", "nats", "opentelemetry", "postgres", "tracing-loki", "sentry"] }
dotenvy.workspace = true
futures-util.workspace = true
opentelemetry.workspace = true
opentelemetry-http.workspace = true
prost.workspace = true
sellershut-core = { workspace = true, features = ["id-gen", "rpc-client-categories", "rpc-server-categories", "serde", "tracing"] }
sentry = { workspace = true, features = ["tower", "tower-http", "rustls", "reqwest"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = ["macros", "migrate", "postgres", "runtime-tokio", "time", "tls-rustls"] }
time = { workspace = true, features = ["formatting"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic.workspace = true
tonic-reflection.workspace = true
tower = { workspace = true, features = ["make", "steer", "util"] }
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-opentelemetry.workspace = true

[dev-dependencies]
fake = { workspace = true, features = ["derive", "time"] }
reqwest = { workspace = true }
