[package]
name = "api-search"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
axum.workspace = true
core-services = { workspace = true, features = ["nats", "rt-tokio", "telemetry"] }
dotenvy.workspace = true
meilisearch-sdk = "0.27.0"
rust-bert = { version = "0.22.0", optional = true }
sellershut-core = { workspace = true, features = ["rpc-client-categories", "serde"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true

[features]
default = ["nlp"]
nlp = ["dep:rust-bert"]
