[package]
name = "api-users"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["macros", "http2", "ws"] }
async-graphql = { workspace = true, features = ["playground"] }
async-graphql-axum.workspace = true
dotenvy.workspace = true
sellershut-core = { workspace = true, features = ["id-gen", "rpc-client-users", "rpc-server-users", "serde"] }
sellershut-services = { workspace = true, features = ["meilisearch", "postgres", "rt-tokio", "telemetry"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = ["macros", "migrate", "postgres", "runtime-tokio", "tls-rustls"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic.workspace = true
tracing.workspace = true

[dev-dependencies]
fake = { workspace = true, features = ["derive"] }
tower.workspace = true
