[package]
name = "cache-service"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
core-services = { workspace = true, features = ["cache-write", "nats", "opentelemetry", "tracing-loki", "sentry"] }
dotenvy.workspace = true
futures-util.workspace = true
prost.workspace = true
sellershut-core = { workspace = true, features = ["categories"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
