[package]
name = "core-services"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
async-nats = { optional = true, workspace = true }
async-trait = { version = "0.1.81", optional = true }
bb8 = { version = "0.8.5", optional = true }
bb8-redis = { version = "0.16.0", optional = true }
redis = { version = "0.26.1", optional = true }
serde = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }
sqlx = { optional = true, workspace = true }
thiserror.workspace = true
tokio = { optional = true, workspace = true }
tracing = { workspace = true, optional = true }
tracing-loki = { version = "0.2.5", default-features = false, optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }

[features]
default = []
api = []
cache = ["dep:redis", "redis/cluster-async", "redis/connection-manager", "redis/tokio-comp", "dep:bb8", "dep:bb8-redis", "dep:async-trait"]
cache-write = ["cache"]
nats = ["dep:async-nats", "serde/derive", "serde_json"]
postgres = ["sqlx/postgres", "serde/derive"]
rt-tokio = ["dep:tokio"]
telemetry = ["tracing", "tracing-loki/compat-0-2-1", "tracing-loki/rustls", "tracing-subscriber/env-filter"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
dotenvy.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
