[package]
name = "sellershut-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository.workspace = true

[dependencies]
base64 = { version = "0.22.1", optional = true }
nanoid = { version = "0.4.0", optional = true }
prost = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
tonic-types = { workspace = true, optional = true }

[features]
default = []
categories = ["dep:tonic", "dep:prost"]
users  = ["dep:tonic", "dep:prost"]
id-gen = ["dep:nanoid"]
rpc-client-categories = ["categories", "dep:tonic-types"]
rpc-server-categories = ["categories", "dep:base64", "dep:tonic-types"]
rpc-client-users = ["users", "dep:tonic-types"]
rpc-server-users = ["users", "dep:base64", "dep:tonic-types"]
serde = ["dep:serde", "serde/derive"]

[build-dependencies]
tonic-build = { version = "0.12.1", features = ["cleanup-markdown"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
